# pytoych-benchmark

./: .gitignore  README.md  pyproject.toml
data/: README.md  download_mnist.py
installation/conda-osx-arm64-mps/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: README.md  template.sh
installation/docker-amd64-cuda/EPFL-runai-setup/: README.md
installation/docker-amd64-cuda/EPFL-runai-setup/template-submit-examples/: first_steps.sh  minimal.sh  remote_development.sh  unattended.sh
installation/docker-amd64-cuda/dependencies/: requirements.txt
installation/docker-amd64-cuda/from-scratch/: environment.yml
outputs/: README.md
reproducibility-scripts/: README.md  evaluate-saved-model.sh  runtime-benchmark.yaml  some-experiment.sh  some_sweep.yaml  template-sweep.yaml  train-model.sh
src/pytoych_benchmark/: mnist.py  mnist_evaluate.py  some_experiment.py  template_experiment.py
src/pytoych_benchmark/configs/: mnist.yaml  mnist_evaluate.yaml  setup.yaml
src/pytoych_benchmark/models/: mnist.py
src/pytoych_benchmark/utils/: __init__.py  seeding.py
